--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -106,7 +106,7 @@
         <item name="android:accessibilityLiveRegion">none</item>
         <item name="android:insetTop">0dp</item>
         <item name="android:insetBottom">0dp</item>
-        <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:fontFamily">@font/montserrat_font_family</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@color/colorWhite</item>
         <item name="android:textSize">@dimen/text_size_biggest</item>
@@ -165,7 +165,7 @@
     <style name="BaseTextViewStyle" parent="Widget.MaterialComponents.TextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:fontFamily">@font/montserrat_font_family</item>
         <item name="android:textColor">@color/colorWhite</item>
         <item name="android:layout_gravity">center</item>
     </style>
@@ -175,7 +175,7 @@
     </style>
 
     <style name="BaseTextViewStyle.MediumTitle.Bold">
-        <item name="android:fontFamily">@font/montserrat_bold</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="BaseTextViewStyle.BiggerText">
@@ -201,7 +201,8 @@
         <item name="android:paddingStart">@dimen/smallest_padding</item>
         <item name="android:paddingEnd">@dimen/smallest_padding</item>
         <item name="android:textColorHint">@color/colorWhite</item>
-        <item name="android:fontFamily">@font/montserrat_bold</item>
+        <item name="android:fontFamily">@font/montserrat_font_family</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
 
@@ -219,7 +220,8 @@
         <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:textColorHint">@color/colorWhite</item>
         <item name="android:textSize">@dimen/text_size_medium_title</item>
-        <item name="android:fontFamily">@font/montserrat_bold</item>
+        <item name="android:fontFamily">@font/montserrat_font_family</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
 </resources>
